handling feature binning

--- a/Weel 01/data/1_handling_outlieres.ipynb
+++ b/Weel 01/data/1_handling_outlieres.ipynb
@@ -10,12 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "8a11d54f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "7fa057a0",
    "metadata": {},
    "outputs": [],
@@ -214,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "31572077",
    "metadata": {},
    "outputs": [
@@ -246,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "f7d879f8",
    "metadata": {},
    "outputs": [
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "477460ca",
    "metadata": {},
    "outputs": [
@@ -322,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "a71a0790",
    "metadata": {},
    "outputs": [],
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1cb119a5",
    "metadata": {},
    "outputs": [
@@ -349,11 +348,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Age : 144 outliners\n",
-      "Tenure : 0 outliners\n",
-      "CreditScore : 8 outliners\n",
-      "Balance : 0 outliners\n",
-      "EstimatedSalary : 0 outliners\n"
+      "Age : 144 outliners (1.44%)\n",
+      "Tenure : 0 outliners (0.0%)\n",
+      "CreditScore : 8 outliners (0.08%)\n",
+      "Balance : 0 outliners (0.0%)\n",
+      "EstimatedSalary : 0 outliners (0.0%)\n"
      ]
     }
    ],
@@ -368,14 +367,84 @@
     "\n",
     "for col in numerical_columns:\n",
     "    n_outliers = find_anomaly(df[col]).sum()\n",
-    "    n_outliers_percentage = round(n_outliers / len(df), 3)\n",
-    "    print(f\"{col} : {n_outliers} outliners\")\n"
+    "    n_outliers_percentage = round(n_outliers / len(df) * 100, 3)\n",
+    "    print(f\"{col} : {n_outliers} outliners ({n_outliers_percentage}%)\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "551f608e",
+   "metadata": {},
+   "source": [
+    "### 3.4 IQR Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "76f60cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_anomaly(data):\n",
+    "    Q1 = np.percentile(data, 25)\n",
+    "    Q3 = np.percentile(data, 75)\n",
+    "\n",
+    "    IQR = Q3 - Q1\n",
+    "\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "\n",
+    "    return (data > upper_bound) | (data < lower_bound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f77daeef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age : 501 outliners (5.01%)\n",
+      "Tenure : 0 outliners (0.0%)\n",
+      "CreditScore : 15 outliners (0.15%)\n",
+      "Balance : 0 outliners (0.0%)\n",
+      "EstimatedSalary : 0 outliners (0.0%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerical_columns = [ \n",
+    "    'Age',\n",
+    "    'Tenure',\n",
+    "    'CreditScore',\n",
+    "    'Balance',\n",
+    "    'EstimatedSalary'\n",
+    "]\n",
+    "\n",
+    "for col in numerical_columns:\n",
+    "    n_outliers = find_anomaly(df[col]).sum()\n",
+    "    n_outliers_percentage = round(n_outliers / len(df) * 100, 3)\n",
+    "    print(f\"{col} : {n_outliers} outliners ({n_outliers_percentage}%)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a46ad5bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('processed/ChurnModelling_Outliers_Handled.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f60cf0",
+   "id": "fd51640a",
    "metadata": {},
    "outputs": [],
    "source": []
