feature binning dependancies updated

--- a/Weel 01/data/2_feature_binning.ipynb
+++ b/Weel 01/data/2_feature_binning.ipynb
@@ -10,15 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3a01c653",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
@@ -31,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "d9dbc1f4",
    "metadata": {},
    "outputs": [
@@ -160,7 +157,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6345a334",
    "metadata": {},
    "outputs": [
@@ -393,7 +390,7 @@
        "9               1         71725.73       0            Good  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7ccb4e5b",
    "metadata": {},
    "outputs": [],
@@ -433,6 +430,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "689eb350",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d837d50c",
    "metadata": {},
    "outputs": [],
    "source": []
